// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Organizer actions Add organizer in a block 1`] = `
Object {
  "payload": Object {
    "id": "firstBlock",
    "organizer": 99,
  },
  "type": "ADD_ORGANIZER_BLOCK",
}
`;

exports[`[STORE] - Organizer actions Add organizer in classic 1`] = `
Object {
  "payload": Object {
    "organizer": 77,
  },
  "type": "ADD_CLASSIC_ORGANIZERS",
}
`;

exports[`[STORE] - Organizer actions Remove organizer in block 1`] = `
Object {
  "payload": Object {
    "id": "firstBlock",
    "organizer": 100,
  },
  "type": "REMOVE_ORGANIZER_BLOCK",
}
`;

exports[`[STORE] - Organizer actions Remove organizer in classic 1`] = `
Object {
  "payload": Object {
    "id": 2,
  },
  "type": "REMOVE_CLASSIC_ORGANIZERS",
}
`;

exports[`[STORE] - Organizer actions Set organizer in classic 1`] = `
Object {
  "payload": Object {
    "organizers": Array [
      1,
      2,
      3,
    ],
  },
  "type": "SET_CLASSIC_ORGANIZERS",
}
`;
